# sonoPleth

./: .gitignore  .gitmodules  CMakeLists.txt  COMMIT_MESSAGE.txt  README.md  RENDERING.md  TODO.md  activate.sh  build.ps1  build.sh  createFromLUSID.py  engine.sh  init.ps1  init.sh  json_schema_info.md  quickCommands.txt  realtimeMain.py  requirements.txt  run.ps1  runGUI.py  runPipeline.py  runRealtime.py  test_main  test_render.py
.github/workflows/: ci.yml
PUBLIC_DOCS/: API.md
build-layouts/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
build-layouts/allolib-build/: Makefile  cmake_install.cmake
build-layouts/libsndfile-build/: Makefile  SndFileTargets.cmake  cmake_install.cmake
cmake/: VerifyWindowsPackage.cmake
data/sourceData/eden_package-4-29/: containsAudio.json  mir_summary.json  scene.lusid.json
gui/: README_GUI.md  agentGUI.md  background.py  main.py  pipeline_runner.py  requirements.txt  styles.qss
gui/imgui/: CMakeLists.txt
gui/imgui/src/: App.cpp  App.hpp  main.cpp
gui/realtimeGUI/: __init__.py  realtimeGUI.py  realtime_runner.py
gui/realtimeGUI/realtime_panels/: RealtimeControlsPanel.py  RealtimeInputPanel.py  RealtimeLogPanel.py  RealtimeTransportPanel.py  __init__.py  brand_widgets.py  theme.py
gui/utils/: effects.py
gui/widgets/: header.py  input_panel.py  log_modal.py  pipeline_panel.py  render_panel.py  stepper.py  switch_toggle.py
internalDocs/: 5_10_api_update.md  5_11_audits.md  AGENTS.md  API.md  API_internal.md  DEPENDENCIES.md  FUTURE_WORK.md  PACKAGING.md  REALTIME_ENGINE.md  REMAP.md  REPO_AUDITING.md  SPATIALIZATION.md  alphaRleaseNotes.md  devHistory.md  engineDiagnostics.md  futureWork.md  guiSession.md  offlineRenderStatus.md  windowsDebug.md
internalDocs/API/: new_context.md
internalDocs/engine_testing/: 4_1_bug_audit.md
internalDocsMD/: 1-27-rendering-dev.md  1-28-vertical-dev.md  2-23-OS-updates.md  AGENTS.md  API_internal.md  BUILD_AND_CI.md  DBAP-Testing.md  REALTIME_ENGINE.md  RENDERING.md  REPO_CLEANUP_AUDIT.md  TODO.md  alloRootOnboarding.md  alloRootPlan.md  allolib-audit.md  devHistory.md  json_schema_info.md  metadataInfo.md  references.md  remap_plan.md
internalDocsMD/API/: api_agent_log.md  api_derived_design.md  api_implementation_handoff.md  api_mismatch_ledger.md  new_context.md
internalDocsMD/OS/: 2-23-OS-updates.md  CI_overview.md
internalDocsMD/Realtime_Engine/: 3_9_bug_audit.md  4_1_bug_audit.md  realtimeEngine_designDoc.md  realtime_testing.md
internalDocsMD/Realtime_Engine/agentDocs/: STYLING_AGENT_INSTRUCTIONS.py  agent_gui_UPDATED_v3.md  realtime_master.md
internalDocsMD/Realtime_Engine/agentDocsv1/: realtime_master.md
internalDocsMD/Repo_Auditing/: REPO_CLEANUP_AUDIT.md
internalDocsMD/Spatialization/: 1-27-rendering-dev.md  1-28-vertical-dev.md  DBAP-Testing.md  RENDERING.md
internalDocsMD/cpp_refactor/: phase3notes.md  refactor_log.md  refactor_planning.md
internalDocsMD/engine_testing/: 4_1_bug_audit.md  fixingNormDBAP.md
internalDocsMD/realtime_planning/: mainplayer.hpp  old_realtime_notes.md  old_realtime_sketch.md  streamingWAV.md
internalDocsMD/realtime_planning/agentDocs/: STYLING_AGENT_INSTRUCTIONS.py  agent_adm_direct_streaming.md  agent_backend_adapter.md  agent_compensation_and_gain.md  agent_gui.md  agent_gui_UPDATED.md  agent_gui_UPDATED_v2.md  agent_gui_UPDATED_v3.md  agent_lfe_router.md  agent_output_remap.md  agent_pose_and_control.md  agent_spatializer_dbap.md  (+6 more)
notebooks/: mainPipeline.ipynb
scripts/: shallow-submodules.sh  sparse-allolib.sh
source/scripts/: examples.ps1  examples.sh
spatial_engine/realtimeEngine/: CMakeLists.txt  internal_validation_runner.cpp
spatial_engine/spatialRender/: CMakeLists.txt
spatial_engine/speaker_layouts/: allosphere_layout.json  translab-sono-layout.json
spatial_engine/src/: JSONLoader.cpp  JSONLoader.hpp  WavUtils.cpp  main.cpp  test_main.cpp
spatial_engine/vbapRender/: CMakeLists.txt
src/: analyzeRender.py  configCPP.py  createFromLUSID.py  createRender.py
src/adm_extract/: CMakeLists.txt  main.cpp
src/analyzeADM/: extractMetadata.py  parser.py
src/config/: configCPP.py  configCPP_posix.py  configCPP_windows.py
src/packageADM/: createRenderInfo.py  packageForRender.py  splitStems.py
utils/: getExamples.py
vbapRender/: translab-sono-layout.json
vbapRender/src/: JSONLoader.cpp  VBAPRenderer.cpp  VBAPRenderer.hpp
(+47 files in other folders)
